<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/notification"
        android:title="@string/delete_account"
        android:icon="@drawable/ic_notifications"
        android:iconTint="@color/white"
        app:showAsAction="always"/>

    <item
        android:id="@+id/morevert"
        android:title="@string/morevert"
        android:icon="@drawable/ic_baseline_more_vert_24"
        app:showAsAction="always"
        android:iconTint="@color/white">


        <menu >

            <group>

            <item
                android:id="@+id/logout"
                android:title="@string/logout"
                android:icon="@drawable/ic_logout" />

            <item
                android:id="@+id/delete_account"
                android:title="@string/delete_account"
                android:icon="@drawable/ic_delete" />
           </group>

            <group>

                <item
                    android:title="communication"
                    android:enabled="false"/>

                <item
                    android:id="@+id/share_app"
                    android:title="Share App"
                    android:icon="@drawable/ic_share"/>
                <item
                    android:id="@+id/rate_app"
                    android:title="Rate Us"
                    android:icon="@drawable/ic_star"/>

                <item
                    android:id="@+id/about"
                    android:title="About Placed"
                    android:icon="@drawable/ic_android"/>

            </group>

        </menu>

    </item>


</menu>